Generate unit tests, refactor classes