@@ -1,3 +1,4 @@
+
 package org.example;
 
 public class Client {
@@ -8,16 +9,15 @@ public class Client {
     }
 
     public String greeting(String name) {
-        if (name == null || name.isBlank()) {
-            throw new IllegalArgumentException("'name' must not be null or empty");
-        }
-
+        validateName(name);
         boolean even = service.isEven(name.length());
-        String greeting = "Hello, %s".formatted(name);
-        if (even) {
-            return greeting.toUpperCase();
-        } else {
-            return greeting;
+        String greeting = String.format("Hello, %s", name);
+        return even ? greeting.toUpperCase() : greeting;
+    }
+
+    private void validateName(String name) {
+        if (name == null || name.trim().isEmpty()) {
+            throw new IllegalArgumentException("'name' must not be null or empty");
         }
     }
 }
